# getopts

./: .travis.opam  .travis.yml  Makefile  Makefile.config.in  Makefile.inc  README.md  configure.ac  index.html  params.json
manual/: .gitignore  Makefile  intro.text
meta/: Makefile  getopts.in
opam/: opam
src/: Makefile  getopts.ml  getopts.mli
testsuite/trip-trap/: Makefile  main.ml  test-empty-optarg.expected  test-empty-rest.expected  test-help-screen.expected
testsuite/unit-testing/: Makefile  main.ml
v0.3.0/: index.html  index_attributes.html  index_class_types.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_types.html  index_values.html
v0.3.2/: Getopts.html  index_classes.html  index_modules.html  type_Getopts.html
